2008-11-22  Chris Morley

	* include/openbabel/text.h: NEW boring and trivial class OBText,
	derived from OBBase. This was proposed last year for formats
	which contained mixed content, like cdx, but has other uses. 

	* src/formats/xml/textformat.cpp: NEW input format for the above
	
	* src/formats/xml/cmlreactformat.cpp: makes use of OBText class
	to insert its output into boilerplate text provided in a file.
	
	* include/openbabel/mol.h, src/mol.cpp(Has2D): add an extra
	parameter to change from "has 2D or 3D" to "has 2D". Correct bug
	which gave the wrong answer for some linear molecules.	
	
	* include/openbabel/obconversion.h, src/obconversion.cpp
	(NumInputObjects): now adjusts for values of -f and -l options

	* src/formats/xml/xml.cpp(GetDerived):correct bug which did not
	update the XMLConversion object even when the base OBConversion
	had changed (bug#2283422).	

	* src/formats/smilesformat.cpp*(SkipObjects): make work properly
	for files without a new line at the end.
	 
	* src/ops/gen2D.cpp, src/ops/gen3d.cpp: set the molecule dimension.

2008-11-21  Geoff Hutchison  <ghutchis@Iridium.chem.pitt.edu>

	* src/data.cpp (GetAtomicNum): Fix bug with patch supplied by
	Wayne Volkmuth (PR#2289021). Crashes with 3-character element.

	* include/openbabel/atom.h: Patch from Wayne Volkmuth to ensure
	atomic numbers are unsigned (i.e., values above 127 are
	OK). PR#2289628.

	* src/formats/pdbformat.cpp: Patch from Francois-Xavier Coudert to
	write CRYST1 records when unit cell data is present. PR#2023510.

	* src/generic.cpp (OBUnitCell::GetLatticeType): Fix bug reported
	(and patched) by Jonathan Coome.

2008-11-21  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/Makefile.am, src/ops/Makefile.am: Build mcdlutil.cpp and
	gen2D.cpp plugin.

	* configure.in: Update to indicate that trunk is not 2.2.0
	build. (May go into a 2.3 or 3.0 build.)

2008-11-12  Chris Morley

	* src/mscdlutil.cpp, data/templates.sdf: revert to previous